<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_20sdp">

    <androidx.cardview.widget.CardView
        android:id="@+id/btnCross"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_gravity="end"
        android:layout_margin="@dimen/_10sdp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/_30sdp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_2sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cross" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:textColorHint="@color/gray"
        app:hintTextAppearance="@style/TextAppearance.AppCompat">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/p_name"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textSize="@dimen/_12sdp" />

    </com.google.android.material.textfield.TextInputLayout>
    >

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:textColorHint="@color/gray"
        app:hintTextAppearance="@style/TextAppearance.AppCompat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_qty"
            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:textColorHint="@color/gray"
        app:hintTextAppearance="@style/TextAppearance.AppCompat">

        <jrizani.jrspinner.JRSpinner
            android:id="@+id/spn_sku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/select_sku"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textSize="@dimen/_12sdp" />
    </com.google.android.material.textfield.TextInputLayout>
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_add_to_list"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_15sdp"
        android:clickable="true"

        android:foreground="@drawable/ripple_dark"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_list"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>