<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:textColorHint="@color/gray"
            app:hintTextAppearance="@style/TextAppearance.AppCompat"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_old_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_pass"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:textColorHint="@color/gray"
            app:hintTextAppearance="@style/TextAppearance.AppCompat"

            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_pass"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:textColorHint="@color/gray"
            app:hintTextAppearance="@style/TextAppearance.AppCompat"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/con_pass"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp" />

        </com.google.android.material.textfield.TextInputLayout>

        <include
            android:id="@+id/btn_login"
            layout="@layout/button_curve"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_15sdp" />
    </LinearLayout>
</layout>