<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable
        name="adapter"
        type="com.nuveq.data_entry.feature.adapter.ProductCatAdapter" />

    <variable
        name="adapterProduct"
        type="com.nuveq.data_entry.feature.adapter.ProductAdapter" />
</data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <include layout="@layout/toolbar" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/_30sdp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearance.AppCompat">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/c_name"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_12sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearance.AppCompat">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/c_phone"
                            android:inputType="phone"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_12sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearance.AppCompat">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_area"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/c_address"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_12sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_15sdp"
                        android:background="@drawable/field_shape">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_5sdp"
                            android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/select_product"
                            android:textColor="@color/testcolorblue" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="5dp"
                            android:background="@color/gray" />
                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:adapter="@{adapter}"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            />
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_15sdp"
                        android:background="@drawable/field_shape">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10sdp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/btnAdd"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawablePadding="5dp"
                                android:gravity="center_vertical"
                                android:text="@string/selected_list"
                                android:textColor="@color/testcolorblue" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginTop="5dp"
                                android:background="@color/gray" />

                            <include layout="@layout/item_product_title" />


                            <androidx.recyclerview.widget.RecyclerView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:adapter="@{adapterProduct}"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
                        </LinearLayout>
                    </RelativeLayout>

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

        <TextView
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/save_txt"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_18sdp" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>